# ML-Project-Template

./: init_setup.sh  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
