[metadata]
licence= MIT
licence_file= LICENSE 
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires=
    ensure== 1.0.2
python_requires = >=3.7

[options.extra_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    black>=22.8.0
    tox>=3.25.1

[options.package_data]
simple_ml_project_test= py.typed

[flake8]
max-line-length= 160
exclude= __init__.py

